--- a/README
+++ b/README
@@ -1,1 +1,5 @@
+Forked from 
+
 http://jeroenooms.github.com/resttesttest
+
+Changed to send JSON output to a textarea, for easy copying to the clipboard.
